[gd_scene load_steps=9 format=3 uid="uid://6vvx7lqd6iam"]

[ext_resource type="Script" path="res://Scripts/Button.gd" id="1_t25gq"]
[ext_resource type="Texture2D" uid="uid://brv557lqug1sh" path="res://Sprites/button-pusher.png" id="2_roq5q"]
[ext_resource type="Texture2D" uid="uid://bdsqkhsohle8x" path="res://Sprites/button-base.png" id="3_v3rdr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vso6e"]
size = Vector2(2.00003, 7.99995)

[sub_resource type="Animation" id="Animation_f5fxx"]
resource_name = "go down"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button-pusher:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Rect2(4, 0, 8, 8), Rect2(-3, 0, 8, 8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:is_down")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"power_on"
}]
}

[sub_resource type="Animation" id="Animation_3ushl"]
resource_name = "go up"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button-pusher:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Rect2(-2, 0, 8, 8), Rect2(4, 0, 8, 8)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"power_off"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_68ix3"]
_data = {
"go down": SubResource("Animation_f5fxx"),
"go up": SubResource("Animation_3ushl")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f4ijw"]
size = Vector2(8.00001, 6)

[node name="Button" type="Node2D"]
script = ExtResource("1_t25gq")
is_down = true

[node name="Button-pusher" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(8, 0)
rotation = 1.57079
texture = ExtResource("2_roq5q")
centered = false
region_enabled = true
region_rect = Rect2(4, 0, 8, 8)

[node name="Button-base" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(8, 0)
rotation = 1.57079
texture = ExtResource("3_v3rdr")
centered = false

[node name="StaticBody2D" type="StaticBody2D" parent="."]
rotation = 1.57079

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2(4.00003, -3.99997)
polygon = PackedVector2Array(1.99999, 2.00001, 2.00001, -1.99999, 4.00003, -3.99997, 3.99997, 4.00003)

[node name="Area2D" type="Area2D" parent="."]
rotation = 1.57079

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(7.00004, -3.99997)
shape = SubResource("RectangleShape2D_vso6e")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_68ix3")
}

[node name="Area2D2" type="Area2D" parent="."]
rotation = 1.57079

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(4.00005, -4)
shape = SubResource("RectangleShape2D_f4ijw")

[node name="plug" type="Node2D" parent="."]
position = Vector2(0, 7)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
